2021-10-26 Se agrega formulario obtención de pesos desde las básculas

--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionLineas/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionLineas/Create.cshtml
@@ -56,6 +56,13 @@
                                     @Html.ValidationMessageFor(model => model.linea, "", new { @class = "text-danger" })
                                 </div>
                             </div>
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.ip, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                <div class="col-md-6 col-sm-6 ">
+                                    @Html.EditorFor(model => model.ip, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.ip, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
                             <div class="ln_solid"></div>
                             <div class="item form-group">
                                 <div class="col-md-6 col-sm-6 offset-md-3">
