--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionLineas/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionLineas/Details.cshtml
@@ -39,7 +39,11 @@
                                     <tr>
                                         <th style="width:30%">@Html.DisplayNameFor(model => model.linea)</th>
                                         <td>@Html.DisplayFor(model => model.linea)</td>
-                                    </tr>                                    
+                                    </tr>
+                                    <tr>
+                                        <th style="width:30%">@Html.DisplayNameFor(model => model.ip)</th>
+                                        <td>@Html.DisplayFor(model => model.ip)</td>
+                                    </tr>
                                     <tr>
                                         <th> @Html.DisplayNameFor(model => model.activo)</th>
                                         <td>
