--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionLineas/Disable.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionLineas/Disable.cshtml
@@ -40,6 +40,10 @@
                                         <td>@Html.DisplayFor(model => model.linea)</td>
                                     </tr>
                                     <tr>
+                                        <th style="width:30%">@Html.DisplayNameFor(model => model.ip)</th>
+                                        <td>@Html.DisplayFor(model => model.ip)</td>
+                                    </tr>
+                                    <tr>
                                         <th> @Html.DisplayNameFor(model => model.activo)</th>
                                         <td>
                                             @if (Model.activo.HasValue && Model.activo.Value)
