--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionLineas/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionLineas/Index.cshtml
@@ -72,6 +72,9 @@
                                                     Planta
                                                 </th>
                                                 <th>
+                                                    IP
+                                                </th>
+                                                <th>
                                                     @Html.DisplayNameFor(model => model.activo)
                                                 </th>
                                                 <th></th>
@@ -80,46 +83,49 @@
                                         <tbody>
                                             @foreach (var item in Model)
                                             {
-                                                <tr>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.linea)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.plantas.descripcion)
-                                                    </td>
-                                                    <td>
-                                                        @if (item.activo.HasValue && item.activo.Value)
-                                                        {
-                                                            <span>Activo</span>
-                                                        }
-                                                        else
-                                                        {
-                                                            <span>Inactivo</span>
-                                                        }
-                                                    </td>
-                                                    <td>
-                                                        <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btm-sm" title="Editar">
-                                                            <i class="fa fa-pencil-square-o"></i>
-                                                        </a>
-                                                        <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btm-sm" title="Detalles">
-                                                            <i class="fa fa-info-circle"></i>
-                                                        </a>
+                                            <tr>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.linea)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.plantas.descripcion)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.ip)
+                                                </td>
+                                                <td>
+                                                    @if (item.activo.HasValue && item.activo.Value)
+                                                    {
+                                                        <span>Activo</span>
+                                                    }
+                                                    else
+                                                    {
+                                                        <span>Inactivo</span>
+                                                    }
+                                                </td>
+                                                <td>
+                                                    <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btm-sm" title="Editar">
+                                                        <i class="fa fa-pencil-square-o"></i>
+                                                    </a>
+                                                    <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btm-sm" title="Detalles">
+                                                        <i class="fa fa-info-circle"></i>
+                                                    </a>
 
-                                                        @if (item.activo.HasValue && !item.activo.Value)
-                                                        {
-                                                            <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning" s title="Habilitar">
-                                                                <i class="fa fa-unlock"></i>
-                                                            </a>
-                                                        }
-                                                        else
-                                                        {
-                                                            <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-danger" title="Deshabilitar">
-                                                                <i class="fa fa-lock"></i>
-                                                            </a>
-                                                        }
+                                                    @if (item.activo.HasValue && !item.activo.Value)
+                                                    {
+                                                        <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning" s title="Habilitar">
+                                                            <i class="fa fa-unlock"></i>
+                                                        </a>
+                                                    }
+                                                    else
+                                                    {
+                                                        <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-danger" title="Deshabilitar">
+                                                            <i class="fa fa-lock"></i>
+                                                        </a>
+                                                    }
 
-                                                    </td>
-                                                </tr>
+                                                </td>
+                                            </tr>
                                             }
                                         </tbody>
                                     </table>
